# numerical_methods

./: .gitignore  explicit_one_step.py  fixed_point.py  implicit_one_step.py  interpolation.py  linalg.py  methods.py  protocols.py  pyproject.toml  test_interpolation.py
numerical_methods/: __init__.py  explicit_one_step.py  fixed_point.py  implicit_one_step.py  interpolation.py  linalg.py  methods.py  protocols.py  utils.py
